--- a/index.css
+++ b/index.css
@@ -98,6 +98,10 @@ textarea {
      flex-flow: column;
    }
 
+   .dark-mode {
+     background-color: #1F2937;
+   }
+
    header {
      color: white;
      background-color: #6943FF;
@@ -110,7 +114,10 @@ textarea {
    }
 
    h1 {
-
+     padding-top: 15px;
+     font-size: 28px;
+     line-height: 38px;
+     font-weight: 800;
    }
 
    .button-container {
@@ -131,15 +138,15 @@ textarea {
      line-height: 24px;
      color: white;
      text-align: center;
+     margin: 10px 0;
    }
 
-   button {
+   #convert-btn {
      width: 117px;
      height: 42px;
      margin-top: 20px;
      background: #FFFFFF;
       /* shadow/sm */
-
      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
      border-radius: 5px;
      border: none;
@@ -148,12 +155,32 @@ textarea {
      line-height: 24px;
    }
 
-   section {
+   .light-mode {
+     background-color: #F4F4F4;
+   }
+
+   #metric-container {
      background-color: white;
      width: 500px;
      height: 110px;
-    text-align: center;
-    margin: 10px 0;
+     margin: 23px 0;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-flow: column;
+   }
+
+   .unit-light {
+     background-color: white;
+   }
+
+   .unit-dark {
+     background-color: #273549;
+   }
+
+   h3, p {
+     margin: 5px 0;
+     text-align: center;
    }
 
    h3 {
@@ -161,6 +188,10 @@ textarea {
      font-size: 20px;
      line-height: 20px;
      font-weight: 600;
+   }
+
+   p {
+     color: #353535;
    }
 
 
